finalisation styles panier

--- a/ressources/liaisons/scss/base/_typo.scss
+++ b/ressources/liaisons/scss/base/_typo.scss
@@ -55,7 +55,8 @@ a {
   transition: 0.15s ease-in-out;
 
   &:hover, visited{
-    color: $rouge;
+    color: $rouge !important;
+    text-decoration: none !important;
   }
 }
 
