--- a/ressources/liaisons/scss/base/_typo.scss
+++ b/ressources/liaisons/scss/base/_typo.scss
@@ -1,6 +1,5 @@
 /**
- * @author Prénom Nom courriel
- * @todo ADAPTER ce fichier selon le projet
+ * @author Olivier Papineau <olivier.12.papineau@gmail.com>
 **/
 
 /**
