--- a/ressources/liaisons/scss/modules/_boutons.scss
+++ b/ressources/liaisons/scss/modules/_boutons.scss
@@ -1,3 +1,8 @@
+/**
+ * @author Olivier Papineau <olivier.12.papineau@gmail.com>
+**/
+
+
 .bouton_panier {
   background-color: $TURQUOISE;
   display: block;
