--- a/ressources/liaisons/scss/modules/_general.scss
+++ b/ressources/liaisons/scss/modules/_general.scss
@@ -1,6 +1,7 @@
 /**
- * @author Nom Prénom <courriel>
- */
+ * @author Olivier Papineau <olivier.12.papineau@gmail.com>
+**/
+
 .conteneur-fluid{
   width: 100%;
 }
