--- a/ressources/liaisons/scss/modules/_header.scss
+++ b/ressources/liaisons/scss/modules/_header.scss
@@ -1,6 +1,8 @@
 /**
- * @author Samuel Loranger
- */
+ * @author Samuel Loranger <samuelloranger@gmail.com>
+**/
+
+
 .header{
   background-color: $GRIS_FONCE;
   width: 100%;
