--- a/ressources/liaisons/scss/pages/_panier.scss
+++ b/ressources/liaisons/scss/pages/_panier.scss
@@ -78,10 +78,11 @@
           &__image {
             display: block;
             width: 100%;
+            max-width: 150px;
             margin-right: 15px;
 
             @media(min-width: $TABLETTE){
-              min-width: 100px;
+              max-width: 100%;
               width: 150px;
               margin-right: 0px;
             }
@@ -101,7 +102,7 @@
             .infosLivre{
               &__titreLivre{
                 a{
-                  color: black;
+                  color: black !important;
                 }
               }
 
@@ -113,6 +114,10 @@
         }
 
         &Centre{
+          @media(min-width: $TABLETTE){
+            padding-left: 0;
+          }
+
           .infosLivre{
             display: none;
 
