--- a/ressources/liaisons/scss/pages/_fiche.scss
+++ b/ressources/liaisons/scss/pages/_fiche.scss
@@ -62,42 +62,73 @@
               .select{
                 position: relative;
 
-                select {
+                select{
                   display: block;
-                  @include fontSize(14px);
-                  padding: .35em 1.4em .35em 0.6em;
-                  width: 100%;
-                  max-width: 100%;
-                  border: 1px solid black;
-                  border-radius: 35px;
                   appearance: none;
-                  margin-bottom: 4%;
+                  height: 32px;
+                  padding: 0 35px 0 10px;
+                  border-radius: 35px;
                 }
 
                 .fleche{
                   position: absolute;
                   top: 0;
-                  right: -3px;
-                  width: 32px;
-                  height: 100%;
-                  background-color: $TURQUOISE;
+                  right: 18px;
+                  display: block;
+                  padding-left: 5px;
                   border-radius: 35px;
+                  background-color: $TURQUOISE;
+                  width: 32px;
+                  height: 32px;
+                  color: white;
+                  @include fontSize(20px);
                   pointer-events: none;
-
-                  &:after{
-                    content: "";
-                    position: absolute;
-                    top: 12px;
-                    right: 8px;
-                    width: 0;
-                    height: 0;
-                    border-left: 8px solid transparent;
-                    border-right: 8px solid transparent;
-                    border-top: 10px solid white;
-                  }
                 }
               }
 
+              .selectionQte{
+                position: relative;
+                width: 150px;
+
+                .qteCourante{
+                  display: block;
+                  width: 100%;
+                  height: 33px;
+                  background-color: white;
+                  border: 1px solid black;
+                  border-radius: 35px;
+                  padding-left: 40px;
+                  line-height: 32px;
+                }
+
+                .btnChangementQte{
+                  position: absolute;
+                  display: block;
+                  width: 32px;
+                  height: 32px;
+                  border-radius: 35px;
+                  color: white;
+                  font-weight: bold;
+                  top: 1px;
+                  text-align: center;
+                  @include fontSize(22px);
+                  background-color: $TURQUOISE;
+                  transition: 0.15s ease-in-out;
+
+                  &__soustraire{
+                    left: -1px;
+                  }
+
+                  &__additionner{
+                    right: -1px;
+                  }
+
+                  &:hover{
+                    top: 0;
+                    transform: scale(1.05);
+                  }
+                }
+              }
             }
 
 
