--- a/ressources/liaisons/scss/styles.scss
+++ b/ressources/liaisons/scss/styles.scss
@@ -44,3 +44,7 @@ $hamburger-layer-spacing: 10px;
 @import "pages/catalogue";
 @import "pages/fiche";
 @import "pages/panier";
+@import "pages/transaction";
+@import "pages/livraison";
+@import "pages/facturation";
+@import "pages/validation";
