--- a/ressources/liaisons/scss/pages/_fiche.scss
+++ b/ressources/liaisons/scss/pages/_fiche.scss
@@ -2,6 +2,20 @@
  * @author Samuel Loranger <samuelloranger@gmail.com>
  */
 
+.js{
+  .btnAjoutPanierScript{
+    display: block !important;
+  }
+
+  .btnAjoutPanierNoScript{
+    display: none;
+  }
+
+  .qteCourante{
+    pointer-events: none !important;
+  }
+}
+
 .fiche{
   .infos{
     &Principales{
@@ -42,9 +56,16 @@
 
           &__prixDispo{
             font-weight: bold;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
 
             .prix{
-              @include fontSize(35px);
+              @include fontSize(22px);
+
+              @media(min-width: 991px){
+                @include fontSize(32px);
+              }
             }
 
             .disponibilite{
@@ -65,6 +86,7 @@
                 select{
                   display: block;
                   appearance: none;
+                  width: 100%;
                   height: 32px;
                   padding: 0 35px 0 10px;
                   border-radius: 35px;
@@ -73,7 +95,7 @@
                 .fleche{
                   position: absolute;
                   top: 0;
-                  right: 18px;
+                  right: 0;
                   display: block;
                   padding-left: 5px;
                   border-radius: 35px;
@@ -84,6 +106,21 @@
                   @include fontSize(20px);
                   pointer-events: none;
                 }
+
+                .arrow-down {
+                  position: absolute;
+                  top: 12px;
+                  right: 9px;
+                  width: 0;
+                  height: 0;
+                  border-left: 7px solid transparent;
+                  border-right: 7px solid transparent;
+                  border-top: 10px solid white;
+                }
+              }
+
+              .labelQte{
+                margin-top: 5%;
               }
 
               .selectionQte{
@@ -93,12 +130,13 @@
                 .qteCourante{
                   display: block;
                   width: 100%;
-                  height: 33px;
+                  height: 32px;
                   background-color: white;
                   border: 1px solid black;
                   border-radius: 35px;
                   padding-left: 40px;
                   line-height: 32px;
+                  pointer-events: initial;
                 }
 
                 .btnChangementQte{
@@ -109,11 +147,19 @@
                   border-radius: 35px;
                   color: white;
                   font-weight: bold;
-                  top: 1px;
+                  top: 0;
                   text-align: center;
                   @include fontSize(22px);
                   background-color: $TURQUOISE;
                   transition: 0.15s ease-in-out;
+
+                  &::selection{
+                    background-color: transparent;
+                  }
+
+                  &:hover{
+                    cursor: default;
+                  }
 
                   &__soustraire{
                     left: -1px;
@@ -122,18 +168,20 @@
                   &__additionner{
                     right: -1px;
                   }
-
-                  &:hover{
-                    top: 0;
-                    transform: scale(1.05);
-                  }
                 }
               }
             }
 
 
             .zoneBouton{
+              display: flex;
+              justify-content: center;
+              flex-direction: column;
               align-items: center;
+
+              .btnAjoutPanierScript{
+                display: none;
+              }
 
               .btnPanier{
                 width: 100%;
@@ -141,19 +189,21 @@
                 color: white;
                 background-color: $TURQUOISE;
                 border-radius: 35px;
-                margin: 18% auto 0 auto;
+                margin: 5% auto 0 auto;
                 @include fontSize(18px);
 
-                @media(min-width: 360px){
-                  @include fontSize(22px);
+                @media(min-width: $DESKTOP-NORMAL){
+                  margin: 18% auto 0 auto;
                 }
 
                 &::after{
                   content: "";
                   display: inline-block;
-                  background-image: url("../../liaisons/images/icones/shopping-cart.svg");
-                  width: 22px;
-                  height: 23px;
+                  background-image: url(../../liaisons/images/icones/shopping-cart.svg);
+                  width: 18px;
+                  height: 18px;
+                  background-size: contain;
+                  background-repeat: no-repeat;
                   margin-left: 5px;
                 }
               }
