--- a/ressources/liaisons/scss/modules/_header.scss
+++ b/ressources/liaisons/scss/modules/_header.scss
@@ -139,7 +139,7 @@
 
                 .nbrItemsPanier{
                   position: absolute;
-                  right: 0;
+                  right: -8px;
                   top: 6px;
                   color: $BEIGE;
                 }
