--- a/ressources/liaisons/scss/pages/_fiche.scss
+++ b/ressources/liaisons/scss/pages/_fiche.scss
@@ -86,6 +86,7 @@
                 select{
                   display: block;
                   appearance: none;
+                  background-color: white;
                   width: 100%;
                   height: 32px;
                   padding: 0 35px 0 10px;
