--- a/ressources/liaisons/scss/pages/_accueil.scss
+++ b/ressources/liaisons/scss/pages/_accueil.scss
@@ -1,6 +1,17 @@
 /**
  * @author Olivier Papineau <olivier.12.papineau@gmail.com>
 **/
+.js{
+  .bouton_panier{
+    &NoScript{
+      display: none !important;
+    }
+
+    &Script{
+      display: block !important;
+    }
+  }
+}
 
 .image_accueil {
   width: 100%;
@@ -125,7 +136,11 @@
         //margin-top: 10px;
       }
 
-
+      .bouton_panier{
+        &Script{
+          display: none;
+        }
+      }
 
       @media (min-width: 768px) and (max-width: 992px) {
         &__details {
@@ -226,6 +241,12 @@
             color: black;
             border-radius: 50px;
             padding: 7px;
+          }
+
+          .bouton_panier{
+            &Script{
+              display: none;
+            }
           }
         }
       }
