fenêtre modale ajout item

--- a/ressources/liaisons/scss/base/_typo.scss
+++ b/ressources/liaisons/scss/base/_typo.scss
@@ -54,7 +54,7 @@ a {
   transition: 0.15s ease-in-out;
 
   &:hover, visited{
-    color: $rouge !important;
+    color: $rouge;
     text-decoration: none !important;
   }
 }
