--- a/ressources/liaisons/scss/pages/_fiche.scss
+++ b/ressources/liaisons/scss/pages/_fiche.scss
@@ -200,7 +200,7 @@
                 &::after{
                   content: "";
                   display: inline-block;
-                  background-image: url(../../liaisons/images/icones/shopping-cart.svg);
+                  background-image: url("../../liaisons/images/icones/shopping-cart.svg");
                   width: 18px;
                   height: 18px;
                   background-size: contain;
