Ajout des styles pour la page inscription

--- a/ressources/liaisons/scss/styles.scss
+++ b/ressources/liaisons/scss/styles.scss
@@ -48,3 +48,5 @@ $hamburger-layer-spacing: 10px;
 @import "pages/livraison";
 @import "pages/facturation";
 @import "pages/validation";
+@import "pages/inscription";
+@import "pages/connexion";
