--- a/ressources/liaisons/scss/pages/_catalogue.scss
+++ b/ressources/liaisons/scss/pages/_catalogue.scss
@@ -1,3 +1,16 @@
+.js{
+  .catalogue__btn--ajouterPanier{
+    &NoScript{
+      display: none;
+    }
+
+    &Script{
+      display: block;
+    }
+  }
+}
+
+
 .catalogue {
   &__auteurs {
     list-style-type: none;
@@ -43,6 +56,10 @@
         padding: 2px 8px;
         font-size: 14px;
         margin-top: 5px;
+      }
+
+      &Script{
+        display: none;
       }
 
     }
