retroaction livraison+facturation

--- a/ressources/liaisons/scss/pages/_transaction.scss
+++ b/ressources/liaisons/scss/pages/_transaction.scss
@@ -22,6 +22,10 @@
     align-items: baseline;
   }
 
+  &__messageErreur{
+    color: $ROUGE;
+  }
+
   &__sous-titre {
     color: $ROUGE;
     text-align: center;
