--- a/ressources/liaisons/scss/pages/_inscription.scss
+++ b/ressources/liaisons/scss/pages/_inscription.scss
@@ -1,3 +1,11 @@
+.champ_invalide {
+  border: solid 2px red !important;
+}
+
+.champ_valide {
+  border: solid 2px green !important;
+}
+
 .bloc_formulaire {
   background-color: $GRIS_PALE;
   border-radius: 10px;
