--- a/ressources/liaisons/scss/pages/_transaction.scss
+++ b/ressources/liaisons/scss/pages/_transaction.scss
@@ -2,7 +2,7 @@
   &__background {
     background-color: $GRIS_PALE;
     border-radius: 20px;
-    padding: 10%;
+    padding: 5% 10% 5% 10%;
     margin-bottom: 5%;
   }
 
@@ -15,6 +15,7 @@
     padding: 7px;
     border: none;
     margin-top: 5%;
+    width: 100%;
   }
 
   &__centrer {
@@ -26,10 +27,17 @@
     color: $ROUGE;
   }
 
+  &__modifier {
+    padding: 5px 30px;
+    border-radius: 50px;
+    color: $ROUGE;
+  }
+
   &__sous-titre {
     color: $ROUGE;
     text-align: center;
     font-size: 22px;
+    margin-top: 5%;
   }
 
   &__titre {
