intégration page confirmation

--- a/ressources/liaisons/scss/styles.scss
+++ b/ressources/liaisons/scss/styles.scss
@@ -50,3 +50,4 @@ $hamburger-layer-spacing: 10px;
 @import "pages/validation";
 @import "pages/inscription";
 @import "pages/connexion";
+@import "pages/confirmation";
