--- a/ressources/liaisons/scss/pages/_livraison.scss
+++ b/ressources/liaisons/scss/pages/_livraison.scss
@@ -1,12 +1,14 @@
 .livraison {
-  &__checkbox{
+  &__checkbox {
     display: flex;
     align-items: baseline;
     margin-top: 3%;
+
     &--label {
       margin-left: 1%;
     }
   }
+
   &__etape {
     display: flex;
 
@@ -24,17 +26,22 @@
       margin-right: 10px;
     }
   }
+
   &__label {
-    margin:4% 0 0 0;
+    margin: 4% 0 0 0;
     font-size: 18px;
+
     &--exemple {
       color: $GRIS_FONCE;
       font-size: 14px;
       margin-left: 10px;
     }
   }
+
   &__input {
     width: 100%;
     height: 40px;
+    border-radius: 20px;
+    padding: 0 10px 0 15px;
   }
 }
