--- a/ressources/liaisons/scss/pages/_confirmation.scss
+++ b/ressources/liaisons/scss/pages/_confirmation.scss
@@ -1,55 +1,59 @@
-.confirmation{
-  &__resumeCommande{
-    &__zoneInfo{
+.confirmation {
+  &__espacement {
+    margin-top: 5%;
+  }
+
+  &__resumeCommande {
+    &__zoneInfo {
       margin-bottom: 8%;
 
-      .infoPanierFlex{
+      .infoPanierFlex {
         display: flex;
         justify-content: space-between;
 
-        &:nth-child(4){
+        &:nth-child(4) {
           border-bottom: 1px solid black;
           margin-bottom: 5px;
         }
       }
 
-      .mode-paiement{
+      .mode-paiement {
         display: flex;
         margin: 0 auto;
         align-items: center;
 
-        .logo{
+        .logo {
           max-width: 50px;
           margin-right: 8%;
         }
 
-        .numeroCarte{
+        .numeroCarte {
           margin-bottom: 0;
         }
       }
     }
   }
 
-  &__resumeItems{
-    &__item{
+  &__resumeItems {
+    &__item {
       margin-bottom: 5%;
       padding-bottom: 2%;
       border-bottom: 1px solid rgba(0, 0, 0, 0.4);
 
-      &:last-child{
+      &:last-child {
         border-bottom: none;
       }
 
-      .conteneurItem{
+      .conteneurItem {
         display: flex;
         position: relative;
 
-        .couvertureLivre{
+        .couvertureLivre {
           width: 40%;
           margin-right: 5%;
         }
 
-        .prixItem{
+        .prixItem {
           position: absolute;
           right: 0;
           bottom: 0;
@@ -57,7 +61,7 @@
           display: flex;
           justify-content: space-between;
 
-          p{
+          p {
             margin-bottom: 0;
           }
         }
@@ -65,22 +69,22 @@
     }
   }
 
-  .transaction__bouton{
+  .transaction__bouton {
     transition: 0.25s ease-in-out;
     transform: scale(0.95);
 
-    &:hover{
+    &:hover {
       transform: scale(1);
     }
   }
 
-  .lienRetour{
+  .lienRetour {
     color: $TURQUOISE;
     display: block;
     margin: 5% auto;
     transition: 0.25s ease-in-out;
 
-    &:hover{
+    &:hover {
       color: black;
     }
   }
