--- a/ressources/liaisons/scss/styles.scss
+++ b/ressources/liaisons/scss/styles.scss
@@ -29,6 +29,7 @@ $hamburger-layer-spacing: 10px;
 
 /*** Base ***/
 @import "base/typo";
+@import "base/print";
 
 /*** Normalize ***/
 @import '../../../node_modules/normalize.scss/normalize';
